feat: add custom structure model component and model code editor with monaco
