# back/response/ai.go
@@ -1,8 +1,8 @@
 package response
 
 type DiagramResponse struct {
-	Models      []Model      `json:"models"`      // obligatoire
-	Connections []Connection `json:"connections"` // obligatoire
+	Models      []Model      `json:"models" binding:"required"`      // obligatoire
+	Connections []Connection `json:"connections" binding:"required"` // obligatoire
 }
 
 type ModelType string
@@ -13,10 +13,10 @@ const (
 )
 
 type Model struct {
-	ID         string    `json:"id"`                   // obligatoire
-	Type       ModelType `json:"type"`                 // enum obligatoire
-	Ports      *Ports    `json:"ports,omitempty"`      // optionnel
-	Components []string  `json:"components,omitempty"` // optionnel
+	ID         string    `json:"id" binding:"required"`   // obligatoire
+	Type       ModelType `json:"type" binding:"required"` // enum obligatoire
+	Ports      *Ports    `json:"ports,omitempty"`         // optionnel
+	Components []string  `json:"components,omitempty"`    // optionnel
 }
 
 type Ports struct {
@@ -25,13 +25,13 @@ type Ports struct {
 }
 
 type Connection struct {
-	From Endpoint `json:"from"` // obligatoire
-	To   Endpoint `json:"to"`   // obligatoire
+	From Endpoint `json:"from" binding:"required"` // obligatoire
+	To   Endpoint `json:"to" binding:"required"`   // obligatoire
 }
 
 type Endpoint struct {
-	Model string `json:"model"` // obligatoire
-	Port  string `json:"port"`  // obligatoire
+	Model string `json:"model" binding:"required"` // obligatoire
+	Port  string `json:"port" binding:"required"`  // obligatoire
 }
 
 type GeneratedModelResponse struct {
